--- a/grafika.css
+++ b/grafika.css
@@ -10,6 +10,32 @@ body {
     text-align: center;
 }
 
+header {
+    height: 15vh;
+}
+
+.flash {
+    color: var(--second-color);
+    transition: 1s;
+    font-size: 25px;
+    margin-left: 0%;
+    margin-right: 20px;
+    transition: 1s;
+    position: relative;
+    top: 7px;
+}
+
+#flash:hover {
+    color: var(--third-color);
+    transition: 1s;
+}
+
+.loader img {
+    width: 20px;
+    height: auto;
+
+}
+
 #load-logo {
     display: block;
   margin-left: auto;
@@ -18,11 +44,124 @@ body {
   margin-top: 16em;
   width: 40%;
 }
+
+#logo {
+    width: auto;
+    height: 35px;
+}
+
 .invert {
     filter: invert(100%);
 }
 
 .icons {
+    text-align: center;
+    font-size: 30px;
+    margin-left: 0%;
+    margin-right: 20px;
+    transition: 0.5s;
+}
+
+.navigace {
+    padding-top: 25px;
+    padding-bottom: 5px;
+    padding-right: 70px;
+    margin: 0;
+    word-spacing: 75px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-family: var(--second-font);
+    position: fixed;
+    top: 0%;
+    flex-wrap: nowrap;
+    height: 80px;
+    width: 99%;
+    -webkit-backdrop-filter: blur(6px);
+    backdrop-filter: blur(6px);
+    /*background-color: rgb(158, 97, 215);*/
+    background: transparent;
+    font-weight: 400;
+    z-index: 25;
+}
+
+
+.navigace a {
+    padding-top: 0%;
+    padding-bottom: 10px;
+    color: var(--second-color);
+    text-decoration: none;
+}
+
+.navigace a:hover {
+    color: var(--third-color);
+}
+
+#current{
+    color: var(--third-color);
+}
+
+#mobile-logo {
+    width: auto;
+    height: 35px;
+    padding: 20px;
+    text-align: center;
+}
+
+.mobile-nav {
+    text-align: center;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: var(--second-color);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    font-weight: 400;
+}
+  
+.mobile-nav a {
+    padding: 8px 8px 16px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--first-color);
+    display: block;
+    transition: 0.4s;
+    font-family: var(--second-font);
+    text-transform: uppercase;
+}
+  
+.mobile-nav a:hover {
+    color: var(--third-color);
+    text-decoration: underline;
+}
+  
+.mobile-nav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+.mobile-nav .closebtn:hover {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+.open { color: var(--second-color);
+padding: 0%;
+text-align: right;}
+
+/*.icons {
     text-align: center;
     font-size: 30px;
     margin-left: 0%;
@@ -51,7 +190,7 @@ body {
 .home-icon:hover {
     color: var(--third-color);
     transition: 1s;
-}
+}*/
 
 .card {
     width: 230px;
@@ -368,4 +507,95 @@ body {
     .grafika1 img, .grafika2 img, .grafika3 img, .grafika4 img, .grafika5 img, .grafika6 img, .grafika7 img, .grafika8 img {width: auto; height: 140px; }    
     .mojelogo h4, .postavy h4, .infografika h4, .logo h4, .webovky h4, .emoji h4 {margin: 25px; font-size: 25px;}
     .grafika1 p, .grafika2 p, .grafika3 p, .grafika4 p, .grafika5 p, .grafika6 p, .grafika7 p, .grafika8 p {font-size: 12px;margin-left: 35px; margin-right: 35px; color: var(--second-color);}
+}*/
+
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
 }
+
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
+}
+
+@media screen and (max-width: 550px) {
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
+}
+
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
+}
+
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
+}
+
+@media screen and (max-width: 550px) {
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
+}
+
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
+}
+
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
+}
+
+@media screen and (max-width: 810px) {
+    .navigace {word-spacing: 70px ;}
+}
+
+@media screen and (max-width: 780px) {
+    .navigace {word-spacing: 60px ;}
+}
+
+@media screen and (max-width: 740px) {
+    .navigace {word-spacing: 55px ;}
+}
+
+@media screen and (max-width: 705px) {
+    .navigace {word-spacing: 45px;}
+}
+
+@media screen and (max-width: 660px) {
+    .navigace {word-spacing: 40px;}
+}
+
+@media screen and (max-width: 618px) {
+    .navigace {font-size: 12px;}
+}
+
+@media screen and (max-width: 560px) {
+    .navigace {font-size: 10px;  }
+}
+
+/*mobile nav*/
+
+@media screen and (min-width: 550px) {
+    .navigace {display: block;}
+    .mobile-nav {display: none;
+        padding-top: 15px;}
+    .open {display: none;}
+    .open-mobile-nav {display: none;}
+    .header2 {display:none;}
+    .header1 { display: block;}
+}
+
+@media screen and (max-width: 550px) {
+    .navigace {display: none;}
+    .mobile-nav {display: block;}
+    .mobile-nav {padding-top: 15px;}
+    .mobile-nav a {font-size: 18px;}
+    .open {display: block;}
+    .open-mobile-nav {display: block;}
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 15em;width: 40%;}
+    .header1 {display: none;}
+    .header2 {display: block;}
+}
+
