--- a/kontakt.css
+++ b/kontakt.css
@@ -8,13 +8,44 @@ body {
     text-align: center;
 }
 
+header {
+    height: 15vh;
+}
+
+.flash {
+    color: var(--second-color);
+    transition: 1s;
+    font-size: 25px;
+    margin-left: 0%;
+    margin-right: 20px;
+    transition: 1s;
+    position: relative;
+    top: 7px;
+}
+
+#flash:hover {
+    color: var(--third-color);
+    transition: 1s;
+}
+
+.loader img {
+    width: 20px;
+    height: auto;
+
+}
+
 #load-logo {
     display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0%;
   margin-top: 16em;
-  width: 30%;
+  width: 40%;
+}
+
+#logo {
+    width: auto;
+    height: 35px;
 }
 
 .invert {
@@ -29,7 +60,7 @@ body {
     transition: 0.5s;
 }
 
-.star-icon {
+/*.star-icon {
     color: var(--second-color);
     padding: 12px;
     transition: 0.5s;
@@ -50,52 +81,185 @@ body {
 .home-icon:hover {
     color: var(--third-color);
     transition: 0.5s;
+}*/
+
+.navigace {
+    padding-top: 25px;
+    padding-bottom: 5px;
+    padding-right: 70px;
+    margin: 0;
+    word-spacing: 75px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-family: var(--second-font);
+    position: fixed;
+    top: 0%;
+    flex-wrap: nowrap;
+    height: 80px;
+    width: 99%;
+    -webkit-backdrop-filter: blur(6px);
+    backdrop-filter: blur(6px);
+    /*background-color: rgb(158, 97, 215);*/
+    background: transparent;
+    font-weight: 400;
+    z-index: 25;
 }
 
-.kontakt h2 {
-     font-family: var(--first-font);
-     color: var(--second-color);
-     font-size: 40px;
-     font-weight: 800;
-     text-transform: uppercase;
-     margin: 60px;
+
+.navigace a {
+    padding-top: 0%;
+    padding-bottom: 10px;
+    color: var(--second-color);
+    text-decoration: none;
 }
 
-.kontakt h4 {
-    font-family: var(--first-font);
-     color: var(--second-color);
-     font-size: 28px;
-     font-weight: 600;
-     text-transform: uppercase;
-     letter-spacing: 0.6px;
-     margin: 30px;
+.navigace a:hover {
+    color: var(--third-color);
+}
+
+#current{
+    color: var(--third-color);
+}
+
+#mobile-logo {
+    width: auto;
+    height: 35px;
+    padding: 20px;
+    text-align: center;
+}
+
+.mobile-nav {
+    text-align: center;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: var(--second-color);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    font-weight: 400;
+}
+  
+.mobile-nav a {
+    padding: 8px 8px 16px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--first-color);
+    display: block;
+    transition: 0.4s;
+    font-family: var(--second-font);
+    text-transform: uppercase;
+}
+  
+.mobile-nav a:hover {
+    color: var(--third-color);
+    text-decoration: underline;
+}
+  
+.mobile-nav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+.mobile-nav .closebtn:hover {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+.open { color: var(--second-color);
+padding: 0%;
+text-align: right;}
+
+section{
+    display: flex;
+    flex-direction: row;
+}
+
+/*section .obrazek img{
+    flex: 1;
+    width: 850px;
+    height: auto;
+    margin: 95px 0 0 180px;
+}*/
+
+.container2 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: flex-start;
+    background-color: #d3e5ff;
+    
+}
+
+section .obrazek img{
+    flex: 1;
+    width: 550px;
+    height: auto;
+    padding: 0 200px 0 20px;
+    z-index: 6;
+}
+
+section .slova{
+    flex: 3;
+    margin: 95px 0 0 20px ;
+    flex-direction: column;
+}
+section .slova img{
+    height: 150px;
+    width: auto;
+}
+
+
+.kontakt {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 100px 0 0 200px;
 }
 
 .kontakt a {
-     font-weight: 600;
+     font-weight: 500;
      font-family: var(--second-font);
-     text-decoration: none;
-     color: var(--third-color);
+     text-decoration: underline;
+     color: var(--second-color);
      transition: 0.5s;
      letter-spacing: 0.6px;
-     padding: 44px;
+     padding: 22px;
      margin: 10px;
+     font-size: 35px;
 }
 
 .kontakt a:hover {
     color: var(--fourth-color);
 }
 
-.kontakt p {
-    color: var(--fourth-color);
-    font-family: var(--second-font);
-    font-weight: 400;
-    margin-bottom: 45px;
-    letter-spacing: 0.35px;
+
+
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
+
 }
 
-.posledni p {
-    margin-bottom: 150px;
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
+}
+
+@media screen and (max-width: 550px) {
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
 }
 
 @media screen and (max-width: 5000px ) {
@@ -108,6 +272,58 @@ body {
     #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
 }
 
+@media screen and (max-width: 810px) {
+    .navigace {word-spacing: 70px ;}
+}
+
+@media screen and (max-width: 780px) {
+    .navigace {word-spacing: 60px ;}
+}
+
+@media screen and (max-width: 740px) {
+    .navigace {word-spacing: 55px ;}
+}
+
+@media screen and (max-width: 705px) {
+    .navigace {word-spacing: 45px;}
+}
+
+@media screen and (max-width: 660px) {
+    .navigace {word-spacing: 40px;}
+}
+
+@media screen and (max-width: 618px) {
+    .navigace {font-size: 12px;}
+}
+
+@media screen and (max-width: 560px) {
+    .navigace {font-size: 10px;  }
+}
+
+/*mobile nav*/
+
+@media screen and (min-width: 550px) {
+    .navigace {display: block;}
+    .mobile-nav {display: none;
+        padding-top: 15px;}
+    .open {display: none;}
+    .open-mobile-nav {display: none;}
+    .header2 {display:none;}
+    .header1 { display: block;}
+}
+
 @media screen and (max-width: 550px) {
-    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
+    .navigace {display: none;}
+    .mobile-nav {display: block;}
+    .mobile-nav {padding-top: 15px;}
+    .mobile-nav a {font-size: 18px;}
+    .open {display: block;}
+    .open-mobile-nav {display: block;}
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 15em;width: 40%;}
+    .header1 {display: none;}
+    .header2 {display: block;}
+    section .obrazek img {display: none;}
+    .kontakt {margin: 0%; }
+    section {text-align: center;}
+    .kontakt a {text-align: center; font-size: 18px;}
 }
