--- a/portfolio.css
+++ b/portfolio.css
@@ -10,6 +10,32 @@ body {
     text-align: center;
 }
 
+header {
+    height: 15vh;
+}
+
+.flash {
+    color: var(--second-color);
+    transition: 1s;
+    font-size: 25px;
+    margin-left: 0%;
+    margin-right: 20px;
+    transition: 1s;
+    position: relative;
+    top: 7px;
+}
+
+#flash:hover {
+    color: var(--third-color);
+    transition: 1s;
+}
+
+.loader img {
+    width: 20px;
+    height: auto;
+
+}
+
 #load-logo {
     display: block;
   margin-left: auto;
@@ -18,11 +44,123 @@ body {
   margin-top: 16em;
   width: 40%;
 }
+
+#logo {
+    width: auto;
+    height: 35px;
+}
+
 .invert {
     filter: invert(100%);
 }
 
 .icons {
+    text-align: center;
+    font-size: 30px;
+    margin-left: 0%;
+    margin-right: 20px;
+    transition: 0.5s;
+}
+
+.navigace {
+    padding-top: 25px;
+    padding-bottom: 5px;
+    padding-right: 70px;
+    margin: 0;
+    word-spacing: 75px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-family: var(--second-font);
+    position: fixed;
+    top: 0%;
+    flex-wrap: nowrap;
+    height: 80px;
+    width: 99%;
+    -webkit-backdrop-filter: blur(6px);
+    backdrop-filter: blur(6px);
+    /*background-color: rgb(158, 97, 215);*/
+    background: transparent;
+    font-weight: 400;
+    z-index: 25;
+}
+
+
+.navigace a {
+    padding-top: 0%;
+    padding-bottom: 10px;
+    color: var(--second-color);
+    text-decoration: none;
+}
+
+.navigace a:hover {
+    color: var(--third-color);
+}
+
+#current{
+    color: var(--third-color);
+}
+
+#mobile-logo {
+    width: auto;
+    height: 35px;
+    padding: 20px;
+    text-align: center;
+}
+
+.mobile-nav {
+    text-align: center;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: var(--second-color);
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    font-weight: 400;
+}
+  
+.mobile-nav a {
+    padding: 8px 8px 16px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: var(--first-color);
+    display: block;
+    transition: 0.4s;
+    font-family: var(--second-font);
+    text-transform: uppercase;
+}
+  
+.mobile-nav a:hover {
+    color: var(--third-color);
+    text-decoration: underline;
+}
+  
+.mobile-nav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+.mobile-nav .closebtn:hover {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+.open { color: var(--second-color);
+padding: 0%;
+text-align: right;}
+/*.icons {
     text-align: center;
     font-size: 30px;
     margin-left: 0%;
@@ -51,7 +189,7 @@ body {
 .home-icon:hover {
     color: var(--third-color);
     transition: 1s;
-}
+}*/
 
 .card {
     width: 230px;
@@ -60,7 +198,7 @@ body {
     border:  2px var(--third-color) solid;
     border-radius: 20px;
     display: inline-block;
-    margin-top: 170px;
+    margin-top: 120px;
     margin-right: 70px;
     margin-left: 70px;
     filter: brightness(90%);
@@ -91,27 +229,33 @@ body {
 }
 
 .card .web  {
-    font-family: 'Source Code Pro', monospace;
+    /*font-family: 'Source Code Pro', monospace;*/
+    font-family: var(--second-font);
     letter-spacing: 1.5px;
     transition: 1s;
+    font-weight: 400;
 }
 
 .card .foto {
-    font-family: 'Dancing Script', cursive;
+    /*font-family: 'Dancing Script', cursive;*/
+    font-family: var(--second-font);
     letter-spacing: 1px;
     font-weight: 400;
     transition: 1s;
 }
 
 .card .grafika {
-    font-family: 'Comic Neue', cursive;
+    /*font-family: 'Comic Neue', cursive;*/
+    font-family: var(--second-font);
     letter-spacing: 0.75px;
     transition: 1s;
-    font-weight: 300;
+   /* font-weight: 300;*/
+   font-weight: 400;
 }
 
 .card .texty {
-    font-family: 'Ibarra Real Nova', serif;
+   /* font-family: 'Ibarra Real Nova', serif;*/
+   font-family: var(--second-font);
     letter-spacing: 2px;
     transition: 1s;
     font-weight: 400;
@@ -137,7 +281,7 @@ body {
     background-color: var(--third-color);
     padding: 5px 13px 5px 13px;
     border-radius: 5px;
-    border: 0.5px solid var(--second-color);
+    border: 0.5px solid var(--third-color);
     font-family: var(--second-font);
     transition: 0.3s;
 }
@@ -153,6 +297,7 @@ body {
 .card button:hover {
     background-color: var(--fourth-color);
     transition: 1s;
+    border: 0.5px solid var(--fourth-color);
 }
 
 .card #icon1, .card #icon2, .card #icon3, .card #icon4 {
@@ -175,4 +320,80 @@ body {
 
 @media screen and (max-width: 550px) {
     #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
+}
+
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
+}
+
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
+}
+
+@media screen and (max-width: 550px) {
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 16em;width: 40%;}
+}
+
+@media screen and (max-width: 5000px ) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 20%;}
+}
+
+@media screen and (max-width: 915px) {
+    .loader img {width: 10px;height: auto;}
+    #load-logo {display: block; position: absolute; top: 23%; left: 50%; transform: translate(-50%, -50%); width: 30%;}
+}
+
+@media screen and (max-width: 810px) {
+    .navigace {word-spacing: 70px ;}
+}
+
+@media screen and (max-width: 780px) {
+    .navigace {word-spacing: 60px ;}
+}
+
+@media screen and (max-width: 740px) {
+    .navigace {word-spacing: 55px ;}
+}
+
+@media screen and (max-width: 705px) {
+    .navigace {word-spacing: 45px;}
+}
+
+@media screen and (max-width: 660px) {
+    .navigace {word-spacing: 40px;}
+}
+
+@media screen and (max-width: 618px) {
+    .navigace {font-size: 12px;}
+}
+
+@media screen and (max-width: 560px) {
+    .navigace {font-size: 10px;  }
+}
+
+/*mobile nav*/
+
+@media screen and (min-width: 550px) {
+    .navigace {display: block;}
+    .mobile-nav {display: none;
+        padding-top: 15px;}
+    .open {display: none;}
+    .open-mobile-nav {display: none;}
+    .header2 {display:none;}
+    .header1 { display: block;}
+}
+
+@media screen and (max-width: 550px) {
+    .navigace {display: none;}
+    .mobile-nav {display: block;}
+    .mobile-nav {padding-top: 15px;}
+    .mobile-nav a {font-size: 18px;}
+    .open {display: block;}
+    .open-mobile-nav {display: block;}
+    #load-logo {display: block; margin-left: auto;margin-right: auto;margin-bottom: 0%;margin-top: 15em;width: 40%;}
+    .header1 {display: none;}
+    .header2 {display: block;}
 }
