--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -55,6 +55,7 @@ header {
 }
 
 .navigace {
+    
     padding-top: 25px;
     padding-bottom: 5px;
     padding-right: 70px;
@@ -63,7 +64,7 @@ header {
     text-align: center;
     text-transform: uppercase;
     font-weight: bolder;
-    font-family: var(--second-font);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     position: fixed;
     top: 0%;
     flex-wrap: nowrap;
@@ -149,20 +150,13 @@ header {
     text-decoration: none;
 }
 
-.open { color: var(--second-color);
-padding: 0%;
-text-align: right;
-top: 50px;
-right: 10px;
+.open { 
+    color: var(--second-color);
+    padding: 20px;
+    text-align: right;
+    top: 50px;
+    right: 10px;
 }
-
-
-
-
-
-
-
-
 
 footer {
     background-color: var(--fourth-color);
@@ -175,9 +169,9 @@ footer {
     text-decoration: none;
     color: var(--first-color);
     font-size: 25px;
-   padding-left: 15px;
-   padding-right: 15px;
-   transition: 0.7s;
+    padding-left: 15px;
+    padding-right: 15px;
+    transition: 0.7s;
 }
 
 .kontakt .mail:hover, .kontakt .instagram:hover {
