--- a/styles/root.css
+++ b/styles/root.css
@@ -3,6 +3,7 @@
     --second-color: #f6f2ff;
     --third-color: #82A6ED;
     --fourth-color: rgb(200, 200, 200);
+    --fifth-color: rgb(6, 0, 37);
     --first-font:  'Cormorant Infant', serif;
     --second-font: 'Work Sans', sans-serif;
 }
@@ -12,6 +13,7 @@
     --second-color: rgb(9, 9, 9);
     --third-color: /*#561790*/ #4700cb;
     --fourth-color: rgb(152, 152, 152);
+    --fifth-color: rgb(152, 152, 152);
     --first-font: 'Cormorant Infant', serif;
     --second-font: 'Work Sans', sans-serif;
 }
